--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -116,6 +116,7 @@ add_executable(contract
   modules/GlobalData/global_data_input_handling.cpp
   modules/GlobalData/global_data_input_handling_utils.cpp
   modules/GlobalData/init_lookup_tables.cpp
+  modules/h5-wrapper.cpp
   modules/OperatorsForMesons.cpp
   modules/Perambulator.cpp
   modules/QuarkLineBlock.cpp
