Fix writing out of C1

--- a/tests/integration-L4/test_all.ini
+++ b/tests/integration-L4/test_all.ini
@@ -51,7 +51,7 @@ operator_list = g4.d0.p0
 [correlator_lists]
 
 # Vacuum bubble
-#correlator_list = C1:Q0:Op9:P0
+correlator_list = C1:Q0:Op9:P0
 
 # pion
 correlator_list = C2+:Q0:Op9:Q0:Op9:P0,1,2,3,4 #pion
