--- a/tests/integration-L4/test_all.ini
+++ b/tests/integration-L4/test_all.ini
@@ -45,7 +45,7 @@ operator_list = g12.d0.p0,1
 operator_list = g13.d0.p0,1
 operator_list = g5.d0.p0,1
 operator_list = g5.d0.p0
-operator_list = g4.d0.p0
+operator_list = g4.d0.p0,1
 
 # all correlation functions which will be computed
 [correlator_lists]
@@ -53,20 +53,26 @@ operator_list = g4.d0.p0
 # Vacuum bubble
 correlator_list = C1:Q0:Op9:P0
 
-# pion
-correlator_list = C2+:Q0:Op9:Q0:Op9:P0,1,2,3,4 #pion
-correlator_list = C2+:Q0:Op9:Q1:Op9:P0,1,2,3,4 #kaon
+# charged pion
+correlator_list = C2+:Q0:Op9:Q0:Op9:P0,1,2,3,4
+
+# charged kaon
+correlator_list = C2+:Q0:Op9:Q1:Op9:P0,1,2,3,4
+
+# neutral pion
+correlator_list = C20:Q0:Op11:Q0:Op11:P0,1,2,3,4
+correlator_list = C20V:Q0:Op11:Q0:Op11:P0,1,2,3,4
 
 # rho 2pt functions
-correlator_list = C20:Q0:Op0:Q0:Op0:P0,1,2,3,4 #rho
-correlator_list = C20:Q0:Op0:Q0:Op1:P0,1,2,3,4 #rho
-correlator_list = C20:Q0:Op0:Q0:Op2:P0,1,2,3,4 #rho
-correlator_list = C20:Q0:Op1:Q0:Op0:P0,1,2,3,4 #rho
-correlator_list = C20:Q0:Op1:Q0:Op1:P0,1,2,3,4 #rho
-correlator_list = C20:Q0:Op1:Q0:Op2:P0,1,2,3,4 #rho
-correlator_list = C20:Q0:Op2:Q0:Op0:P0,1,2,3,4 #rho
-correlator_list = C20:Q0:Op2:Q0:Op1:P0,1,2,3,4 #rho
-correlator_list = C20:Q0:Op2:Q0:Op2:P0,1,2,3,4 #rho
+correlator_list = C20:Q0:Op0:Q0:Op0:P0,1,2,3,4
+correlator_list = C20:Q0:Op0:Q0:Op1:P0,1,2,3,4
+correlator_list = C20:Q0:Op0:Q0:Op2:P0,1,2,3,4
+correlator_list = C20:Q0:Op1:Q0:Op0:P0,1,2,3,4
+correlator_list = C20:Q0:Op1:Q0:Op1:P0,1,2,3,4
+correlator_list = C20:Q0:Op1:Q0:Op2:P0,1,2,3,4
+correlator_list = C20:Q0:Op2:Q0:Op0:P0,1,2,3,4
+correlator_list = C20:Q0:Op2:Q0:Op1:P0,1,2,3,4
+correlator_list = C20:Q0:Op2:Q0:Op2:P0,1,2,3,4
 
 # charged 3pt diagrams
 correlator_list = C3+:Q0:Op9:Q0:Op0:Q0:Op9:P0,1,2,3,4
