--- a/tests/integration-L4/test_all.ini
+++ b/tests/integration-L4/test_all.ini
@@ -61,7 +61,7 @@ correlator_list = C2+:Q0:Op9:Q1:Op9:P0,1,2,3,4
 
 # neutral pion
 #correlator_list = C20:Q0:Op11:Q0:Op11:P0,1,2,3,4
-correlator_list = C20V:Q0:Op11:Q0:Op11:P0,1,2,3,4
+#correlator_list = C20V:Q0:Op11:Q0:Op11:P0,1,2,3,4
 
 # rho 2pt functions
 correlator_list = C20:Q0:Op0:Q0:Op0:P0,1,2,3,4
