--- a/tests/integration-L4/test_all.ini
+++ b/tests/integration-L4/test_all.ini
@@ -51,7 +51,7 @@ operator_list = g4.d0.p0,1
 [correlator_lists]
 
 # Vacuum bubble
-correlator_list = C1:Q0:Op9:P0
+correlator_list = C1:Op9:Q0:P0
 
 # charged pion
 correlator_list = C2+:Q0:Op9:Q0:Op9:P0,1,2,3,4
@@ -64,15 +64,15 @@ correlator_list = C2+:Q0:Op9:Q1:Op9:P0,1,2,3,4
 #correlator_list = C20V:Q0:Op11:Q0:Op11:P0,1,2,3,4
 
 # rho 2pt functions
-correlator_list = C20:Q0:Op0:Q0:Op0:P0,1,2,3,4
-correlator_list = C20:Q0:Op0:Q0:Op1:P0,1,2,3,4
-correlator_list = C20:Q0:Op0:Q0:Op2:P0,1,2,3,4
-correlator_list = C20:Q0:Op1:Q0:Op0:P0,1,2,3,4
-correlator_list = C20:Q0:Op1:Q0:Op1:P0,1,2,3,4
-correlator_list = C20:Q0:Op1:Q0:Op2:P0,1,2,3,4
-correlator_list = C20:Q0:Op2:Q0:Op0:P0,1,2,3,4
-correlator_list = C20:Q0:Op2:Q0:Op1:P0,1,2,3,4
-correlator_list = C20:Q0:Op2:Q0:Op2:P0,1,2,3,4
+correlator_list = C20:Op0:Q0:Op0:Q0:P0,1,2,3,4
+correlator_list = C20:Op0:Q0:Op1:Q0:P0,1,2,3,4
+correlator_list = C20:Op0:Q0:Op2:Q0:P0,1,2,3,4
+correlator_list = C20:Op1:Q0:Op0:Q0:P0,1,2,3,4
+correlator_list = C20:Op1:Q0:Op1:Q0:P0,1,2,3,4
+correlator_list = C20:Op1:Q0:Op2:Q0:P0,1,2,3,4
+correlator_list = C20:Op2:Q0:Op0:Q0:P0,1,2,3,4
+correlator_list = C20:Op2:Q0:Op1:Q0:P0,1,2,3,4
+correlator_list = C20:Op2:Q0:Op2:Q0:P0,1,2,3,4
 
 # neutral 3pt diagrams
 correlator_list = C30:Q0:Op9:Q0:Op9:Q0:Op9:P0,1,2,3,4
