--- a/tests/integration-L4/test_all.ini
+++ b/tests/integration-L4/test_all.ini
@@ -54,10 +54,10 @@ operator_list = g4.d0.p0,1
 correlator_list = C1:Op9:Q0:P0
 
 # charged pion
-correlator_list = C2+:Q0:Op9:Q0:Op9:P0,1,2,3,4
+correlator_list = C2+:Op9:Q0:Op9:Q0:P0,1,2,3,4
 
 # charged kaon
-correlator_list = C2+:Q0:Op9:Q1:Op9:P0,1,2,3,4
+correlator_list = C2+:Op9:Q0:Op9:Q1:P0,1,2,3,4
 
 # neutral pion
 #correlator_list = C20:Q0:Op11:Q0:Op11:P0,1,2,3,4
@@ -74,25 +74,25 @@ correlator_list = C20:Op2:Q0:Op0:Q0:P0,1,2,3,4
 correlator_list = C20:Op2:Q0:Op1:Q0:P0,1,2,3,4
 correlator_list = C20:Op2:Q0:Op2:Q0:P0,1,2,3,4
 
+# charged 3pt diagrams
+correlator_list = C3+:Op9:Q0:Op0:Q0:Op9:Q0:P0,1,2,3,4
+correlator_list = C3+:Op9:Q0:Op1:Q0:Op9:Q0:P0,1,2,3,4
+correlator_list = C3+:Op9:Q0:Op2:Q0:Op9:Q0:P0,1,2,3,4
+
 # neutral 3pt diagrams
-correlator_list = C30:Q0:Op9:Q0:Op9:Q0:Op9:P0,1,2,3,4
+correlator_list = C30:Op9:Q0:Op9:Q0:Op9:Q0:P0,1,2,3,4
 
 # charged 4pt diagrams
-correlator_list = C4+D:Q0:Op9:Q0:Op9:Q0:Op9:Q0:Op9:P0,1,2,3,4
-correlator_list = C4+V:Q0:Op9:Q0:Op9:Q0:Op9:Q0:Op9:P0,1,2,3,4
-correlator_list = C4+B:Q0:Op9:Q0:Op9:Q0:Op9:Q0:Op9:P0,1,2,3,4
-correlator_list = C4+C:Q0:Op9:Q0:Op9:Q0:Op9:Q0:Op9:P0,1,2,3,4
+correlator_list = C4+D:Op9:Q0:Op9:Q0:Op9:Q0:Op9:Q0:P0,1,2,3,4
+correlator_list = C4+V:Op9:Q0:Op9:Q0:Op9:Q0:Op9:Q0:P0,1,2,3,4
+correlator_list = C4+B:Op9:Q0:Op9:Q0:Op9:Q0:Op9:Q0:P0,1,2,3,4
+correlator_list = C4+C:Op9:Q0:Op9:Q0:Op9:Q0:Op9:Q0:P0,1,2,3,4
 
 # neutral 4pt diagrams
-correlator_list = C40D:Q0:Op9:Q0:Op9:Q0:Op9:Q0:Op9:P0,1,2,3,4
-correlator_list = C40V:Q0:Op9:Q0:Op9:Q0:Op9:Q0:Op9:P0,1,2,3,4
-correlator_list = C40B:Q0:Op9:Q0:Op9:Q0:Op9:Q0:Op9:P0,1,2,3,4
-correlator_list = C40C:Q0:Op9:Q0:Op9:Q0:Op9:Q0:Op9:P0,1,2,3,4
-
-# charged 3pt diagrams
-correlator_list = C3+:Q0:Op9:Q0:Op0:Q0:Op9:P0,1,2,3,4
-correlator_list = C3+:Q0:Op9:Q0:Op1:Q0:Op9:P0,1,2,3,4
-correlator_list = C3+:Q0:Op9:Q0:Op2:Q0:Op9:P0,1,2,3,4
+correlator_list = C40D:Op9:Q0:Op9:Q0:Op9:Q0:Op9:Q0:P0,1,2,3,4
+correlator_list = C40V:Op9:Q0:Op9:Q0:Op9:Q0:Op9:Q0:P0,1,2,3,4
+correlator_list = C40B:Op9:Q0:Op9:Q0:Op9:Q0:Op9:Q0:P0,1,2,3,4
+correlator_list = C40C:Op9:Q0:Op9:Q0:Op9:Q0:Op9:Q0:P0,1,2,3,4
 
 #correlator_list = C2+:Q0:Op10:Q0:Op10 #unitary pion
 #correlator_list = C2+:Q0:Op10:Q1:Op10 #OS kaon
