Also run C30V in the tests

--- a/tests/integration-L4/test_all.ini
+++ b/tests/integration-L4/test_all.ini
@@ -81,6 +81,7 @@ correlator_list = C3+:Op9:Q0:Op2:Q0:Op9:Q0:P0,1,2,3,4
 
 # neutral 3pt diagrams
 correlator_list = C30:Op9:Q0:Op9:Q0:Op9:Q0:P0,1,2,3,4
+correlator_list = C30V:Op9:Q0:Op9:Q0:Op9:Q0:P0,1,2,3,4
 
 # charged 4pt diagrams
 correlator_list = C4+D:Op9:Q0:Op9:Q0:Op9:Q0:Op9:Q0:P0,1,2,3,4
