h5 files no longer created if not specified in infile

--- a/tests/integration-L4/test_all.ini
+++ b/tests/integration-L4/test_all.ini
@@ -60,8 +60,8 @@ correlator_list = C2+:Op9:Q0:Op9:Q0:P0,1,2,3,4
 correlator_list = C2+:Op9:Q0:Op9:Q1:P0,1,2,3,4
 
 # neutral pion
-#correlator_list = C20:Q0:Op11:Q0:Op11:P0,1,2,3,4
-#correlator_list = C20V:Q0:Op11:Q0:Op11:P0,1,2,3,4
+correlator_list = C20:Q0:Op11:Q0:Op11:P0,1,2,3,4
+correlator_list = C20V:Q0:Op11:Q0:Op11:P0,1,2,3,4
 
 # rho 2pt functions
 correlator_list = C20:Op0:Q0:Op0:Q0:P0,1,2,3,4
