gauge config path passed to OperatorFactory

--- a/tests/integration-L4/test_all.ini
+++ b/tests/integration-L4/test_all.ini
@@ -15,7 +15,7 @@ Lz = 4
 start_config = 1000
 end_config   = 1000
 delta_config = 1
-path_config = ./
+path_config = /hiskp4/gauges/quenched/wilson_b5.85_L12T24
 
 # eigenvector handling:
 number_of_eigen_vec = 16
