--- a/infiles/LapHs.in
+++ b/infiles/LapHs.in
@@ -44,7 +44,7 @@ operator_list = g9.d0.p0
 # all correlation functions which will be computed
 [correlator_lists]
 #correlator_list = C1:Q0:Op4
-correlator_list = C2+:Q0:Op5:Q0:Op5 #pion
+correlator_list = C2c:Q0:Op5:Q0:Op5 #pion
 #correlator_list = C2+:Q0:Op5:Q1:Op5 #kaon
 #correlator_list = C4+D:Q0:Op5:Q0:Op5:Q0:Op5:Q0:Op5
 #correlator_list = C4+V:Q0:Op5:Q0:Op5:Q0:Op5:Q0:Op5
