--- a/infiles/pipi_I2.in
+++ b/infiles/pipi_I2.in
@@ -49,8 +49,8 @@ operator_list = g5.d0.p0
 [correlator_lists]
 
 #pion
-correlator_list = C2+:Q0:Op9:Q0:Op9:P0,1,2,3,4
+correlator_list = C2c:Q0:Op9:Q0:Op9:P0,1,2,3,4
 
 # pion-pion
-correlator_list = C4+D:Q0:Op9:Q0:Op9:Q0:Op9:Q0:Op9:P0,1,2,3,4
-correlator_list = C4+C:Q0:Op9:Q0:Op9:Q0:Op9:Q0:Op9:P0,1,2,3,4
+correlator_list = C4cD:Q0:Op9:Q0:Op9:Q0:Op9:Q0:Op9:P0,1,2,3,4
+correlator_list = C4cC:Q0:Op9:Q0:Op9:Q0:Op9:Q0:Op9:P0,1,2,3,4
