--- a/infiles/test_all.in
+++ b/infiles/test_all.in
@@ -51,8 +51,8 @@ operator_list = g5.d0.p0
 [correlator_lists]
 
 # pion
-correlator_list = C2+:Q0:Op9:Q0:Op9:P0,1,2,3,4 #pion
-correlator_list = C2+:Q0:Op9:Q1:Op9:P0,1,2,3,4 #kaon
+correlator_list = C2c:Q0:Op9:Q0:Op9:P0,1,2,3,4 #pion
+correlator_list = C2c:Q0:Op9:Q1:Op9:P0,1,2,3,4 #kaon
 
 # rho 2pt functions
 correlator_list = C20:Q0:Op0:Q0:Op0:P0,1,2,3,4 #rho
@@ -66,18 +66,18 @@ correlator_list = C20:Q0:Op2:Q0:Op1:P0,1,2,3,4 #rho
 correlator_list = C20:Q0:Op2:Q0:Op2:P0,1,2,3,4 #rho
 
 # charged 3pt diagrams 
-correlator_list = C3+:Q0:Op9:Q0:Op0:Q0:Op9:P0,1,2,3,4
-correlator_list = C3+:Q0:Op9:Q0:Op1:Q0:Op9:P0,1,2,3,4
-correlator_list = C3+:Q0:Op9:Q0:Op2:Q0:Op9:P0,1,2,3,4
+correlator_list = C3c:Q0:Op9:Q0:Op0:Q0:Op9:P0,1,2,3,4
+correlator_list = C3c:Q0:Op9:Q0:Op1:Q0:Op9:P0,1,2,3,4
+correlator_list = C3c:Q0:Op9:Q0:Op2:Q0:Op9:P0,1,2,3,4
 
 # neutral 3pt diagrams
 correlator_list = C30:Q0:Op9:Q0:Op0:Q0:Op9:P0,1,2,3,4
 
 # charged 4pt diagrams
-correlator_list = C4+D:Q0:Op9:Q0:Op9:Q0:Op9:Q0:Op9:P0,1,2,3,4
-correlator_list = C4+V:Q0:Op9:Q0:Op9:Q0:Op9:Q0:Op9:P0,1,2,3,4
-correlator_list = C4+B:Q0:Op9:Q0:Op9:Q0:Op9:Q0:Op9:P0,1,2,3,4
-correlator_list = C4+C:Q0:Op9:Q0:Op9:Q0:Op9:Q0:Op9:P0,1,2,3,4
+correlator_list = C4cD:Q0:Op9:Q0:Op9:Q0:Op9:Q0:Op9:P0,1,2,3,4
+correlator_list = C4cV:Q0:Op9:Q0:Op9:Q0:Op9:Q0:Op9:P0,1,2,3,4
+correlator_list = C4cB:Q0:Op9:Q0:Op9:Q0:Op9:Q0:Op9:P0,1,2,3,4
+correlator_list = C4cC:Q0:Op9:Q0:Op9:Q0:Op9:Q0:Op9:P0,1,2,3,4
 
 # neutral 4pt diagrams
 correlator_list = C40D:Q0:Op9:Q0:Op9:Q0:Op9:Q0:Op9:P0,1,2,3,4
