--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,20 +65,23 @@ if(NOT DEFINED LIME_INCLUDE_DIRS)
   message(FATAL_ERROR "Must specify -DLIME_INCLUDE_DIRS on the command line to CMake.")
 endif()
 include_directories(SYSTEM ${LIME_INCLUDE_DIRS})
+include_directories(${LIME_INCLUDE_DIRS})
 
 # Lime
 if(NOT DEFINED LIME_LIBRARIES)
   message(FATAL_ERROR "Must specify -DLIME_LIBRARIES on the command line to CMake.")
 endif()
 
-
-
 # OpenMP
 find_package(OpenMP)
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
 
-include_directories(${LIME_INCLUDE_DIRS})
+# include-what-you-use
+find_program(iwyu_path NAMES include-what-you-use iwyu)
+if(NOT iwyu_path)
+  message(FATAL_ERROR "Could not find the program include-what-you-use")
+endif()
 
 ###############################################################################
 #                                 Build Flags                                 #
@@ -150,6 +153,8 @@ target_link_libraries(contract
   )
 
 install(TARGETS contract DESTINATION bin)
+
+set_target_properties(contract PROPERTIES CXX_INCLUDE_WHAT_YOU_USE ${iwyu_path})
 
 ### test-iterator
 
