complete switch + -> c across the board, except for integration testing data

--- a/infiles/test.in
+++ b/infiles/test.in
@@ -50,9 +50,9 @@ operator_list = g5.d0.p0,1
 # all correlation functions which will be computed                              
 [correlator_lists]
 correlator_list = C2c:Q0:Op10:Q0:Op10 #pion
-#correlator_list = C4+D:Q0:Op9:Q0:Op9:Q0:Op9:Q0:Op9
-##correlator_list = C4+V:Q0:Op9:Q0:Op9:Q0:Op9:Q0:Op9
-#correlator_list = C4+B:Q0:Op9:Q0:Op9:Q0:Op9:Q0:Op9
+#correlator_list = C4cD:Q0:Op9:Q0:Op9:Q0:Op9:Q0:Op9
+##correlator_list = C4cV:Q0:Op9:Q0:Op9:Q0:Op9:Q0:Op9
+#correlator_list = C4cB:Q0:Op9:Q0:Op9:Q0:Op9:Q0:Op9
 #correlator_list = C20:Q0:Op0:Q0:Op0 #rho
 #correlator_list = C20:Q0:Op0:Q0:Op1 #rho
 #correlator_list = C20:Q0:Op0:Q0:Op2 #rho
@@ -134,13 +134,13 @@ correlator_list = C2c:Q0:Op10:Q0:Op10 #pion
 #correlator_list = C20:Q0:Op8:Q0:Op6 #rho
 #correlator_list = C20:Q0:Op8:Q0:Op7 #rho
 #correlator_list = C20:Q0:Op8:Q0:Op8 #rho
-#correlator_list = C3+:Q0:Op9:Q0:Op0:Q0:Op9
-#correlator_list = C3+:Q0:Op9:Q0:Op1:Q0:Op9
-#correlator_list = C3+:Q0:Op9:Q0:Op2:Q0:Op9
-#correlator_list = C3+:Q0:Op9:Q0:Op3:Q0:Op9
-#correlator_list = C3+:Q0:Op9:Q0:Op4:Q0:Op9
-#correlator_list = C3+:Q0:Op9:Q0:Op5:Q0:Op9
-#correlator_list = C3+:Q0:Op9:Q0:Op6:Q0:Op9
-#correlator_list = C3+:Q0:Op9:Q0:Op7:Q0:Op9
-#correlator_list = C3+:Q0:Op9:Q0:Op8:Q0:Op9
+#correlator_list = C3c:Q0:Op9:Q0:Op0:Q0:Op9
+#correlator_list = C3c:Q0:Op9:Q0:Op1:Q0:Op9
+#correlator_list = C3c:Q0:Op9:Q0:Op2:Q0:Op9
+#correlator_list = C3c:Q0:Op9:Q0:Op3:Q0:Op9
+#correlator_list = C3c:Q0:Op9:Q0:Op4:Q0:Op9
+#correlator_list = C3c:Q0:Op9:Q0:Op5:Q0:Op9
+#correlator_list = C3c:Q0:Op9:Q0:Op6:Q0:Op9
+#correlator_list = C3c:Q0:Op9:Q0:Op7:Q0:Op9
+#correlator_list = C3c:Q0:Op9:Q0:Op8:Q0:Op9
 
