--- a/infiles/D4.in
+++ b/infiles/D4.in
@@ -40,11 +40,11 @@ operator_list = g1.d0.p0,1,2,3
 
 # all correlation functions which will be computed
 [correlator_lists]
-#correlator_list = C2+:Q0:Op0:Q0:Op0
-#correlator_list = C4+D:Q0:Op0:Q0:Op0:Q0:Op0:Q0:Op0
-#correlator_list = C4+V:Q0:Op0:Q0:Op0:Q0:Op0:Q0:Op0
+#correlator_list = C2c:Q0:Op0:Q0:Op0
+#correlator_list = C4cD:Q0:Op0:Q0:Op0:Q0:Op0:Q0:Op0
+#correlator_list = C4cV:Q0:Op0:Q0:Op0:Q0:Op0:Q0:Op0
 #correlator_list = C20:Q0:Op1:Q0:Op1
-#correlator_list = C3+:Q0:Op0:Q0:Op1:Q0:Op0
+#correlator_list = C3c:Q0:Op0:Q0:Op1:Q0:Op0
 correlator_list = C4cB:Q0:Op0:Q0:Op0:Q0:Op0:Q0:Op0
 
 
