--- a/infiles/LapHs.in
+++ b/infiles/LapHs.in
@@ -45,11 +45,11 @@ operator_list = g9.d0.p0
 [correlator_lists]
 #correlator_list = C1:Q0:Op4
 correlator_list = C2c:Q0:Op5:Q0:Op5 #pion
-#correlator_list = C2+:Q0:Op5:Q1:Op5 #kaon
-#correlator_list = C4+D:Q0:Op5:Q0:Op5:Q0:Op5:Q0:Op5
-#correlator_list = C4+V:Q0:Op5:Q0:Op5:Q0:Op5:Q0:Op5
-#correlator_list = C4+C:Q0:Op5:Q0:Op5:Q0:Op5:Q0:Op5
-#correlator_list = C4+B:Q0:Op5:Q0:Op5:Q0:Op5:Q0:Op5
+#correlator_list = C2c:Q0:Op5:Q1:Op5 #kaon
+#correlator_list = C4cD:Q0:Op5:Q0:Op5:Q0:Op5:Q0:Op5
+#correlator_list = C4cV:Q0:Op5:Q0:Op5:Q0:Op5:Q0:Op5
+#correlator_list = C4cC:Q0:Op5:Q0:Op5:Q0:Op5:Q0:Op5
+#correlator_list = C4cB:Q0:Op5:Q0:Op5:Q0:Op5:Q0:Op5
 #
 correlator_list = C20:Q0:Op4:Q0:Op4 #pion
 #correlator_list = C20:Q0:Op4:Q1:Op4 #kaon
