--- a/infiles/contract.in
+++ b/infiles/contract.in
@@ -49,12 +49,12 @@ operator_list = g9.d0.p0
 # all correlation functions which will be computed
 [correlator_lists]
 #correlator_list = C1:Q0:Op4
-#correlator_list = C2+:Q0:Op6:Q0:Op6 #pion
-#correlator_list = C2+:Q0:Op5:Q1:Op5 #kaon
+#correlator_list = C2c:Q0:Op6:Q0:Op6 #pion
+#correlator_list = C2c:Q0:Op5:Q1:Op5 #kaon
 #correlator_list = C40D:Q0:Op4:Q1:Op4:Q0:Op4:Q0:Op4
-#correlator_list = C4+V:Q0:Op5:Q0:Op5:Q0:Op5:Q0:Op5
-#correlator_list = C4+C:Q0:Op5:Q0:Op5:Q0:Op5:Q0:Op5
-#correlator_list = C4+B:Q0:Op5:Q0:Op5:Q0:Op5:Q0:Op5
+#correlator_list = C4cV:Q0:Op5:Q0:Op5:Q0:Op5:Q0:Op5
+#correlator_list = C4cC:Q0:Op5:Q0:Op5:Q0:Op5:Q0:Op5
+#correlator_list = C4cB:Q0:Op5:Q0:Op5:Q0:Op5:Q0:Op5
 
 #correlator_list = C40D:Q0:Op5:Q0:Op5:Q0:Op5:Q0:Op5
 #correlator_list = C40V:Q0:Op5:Q0:Op5:Q0:Op5:Q0:Op5
