--- a/infiles/test_all.in
+++ b/infiles/test_all.in
@@ -86,10 +86,10 @@ correlator_list = C40V:Q0:Op9:Q0:Op9:Q0:Op9:Q0:Op9:P0,1,2,3,4
 #correlator_list = C40C:Q0:Op9:Q0:Op9:Q0:Op9:Q0:Op9
 
 
-#correlator_list = C2+:Q0:Op10:Q0:Op10 #unitary pion
-#correlator_list = C2+:Q0:Op10:Q1:Op10 #OS kaon
-##correlator_list = C2+:Q0:Op10:Q0:Op10 #usualpion with gamma10
-##correlator_list = C2+:Q0:Op4:Q0:Op4 #OS pion with \bar{u}^+u^-
-#correlator_list = C4+D:Q0:Op10:Q1:Op10:Q0:Op10:Q0:Op10 # direct K^+pi^+
-#correlator_list = C4+C:Q0:Op10:Q1:Op10:Q0:Op10:Q0:Op10 # cross diagram K^+pi^+
+#correlator_list = C2c:Q0:Op10:Q0:Op10 #unitary pion
+#correlator_list = C2c:Q0:Op10:Q1:Op10 #OS kaon
+##correlator_list = C2c:Q0:Op10:Q0:Op10 #usualpion with gamma10
+##correlator_list = C2c:Q0:Op4:Q0:Op4 #OS pion with \bar{u}^cu^-
+#correlator_list = C4cD:Q0:Op10:Q1:Op10:Q0:Op10:Q0:Op10 # direct K^cpi^c
+#correlator_list = C4cC:Q0:Op10:Q1:Op10:Q0:Op10:Q0:Op10 # cross diagram K^cpi^c
 
