Rework build system to use targets and properties

--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -5,7 +5,7 @@ if(${benchmark_FOUND})
     main.cpp
     )
 
-  target_link_libraries(bench-main benchmark::benchmark)
+  target_link_libraries(bench-main benchmark::benchmark lcontract)
 
 else()
   message(STATUS "Google benchmark framework was not found, not building benchmarks.")
