further fine-grained time measurements, usage of noalias() where possible and interchanged loop order where it might help with cache reuse

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -101,7 +101,7 @@ endif()
 # OpenMP
 find_package(OpenMP)
 target_compile_options(lcontract PUBLIC ${OpenMP_CXX_FLAGS})
-target_link_libraries(lcontract PUBLIC ${OpenMP_CXX_FLAGS})
+target_link_libraries(lcontract PUBLIC ${OpenMP_CXX_LIBRARIES} ${OpenMP_CXX_FLAGS})
 
 ###############################################################################
 #                                 Build Flags                                 #
