Rename make scripts

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ tests/integration-L4/MovingFrameMomentum/
 Testing/Temporary
 tests/Testing/Temporary
 sLapH-contractions.creator.user
+make-coffee-build.sh
