--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,7 @@ add_library(lcontract
   modules/GlobalData/init_lookup_tables.cpp
   modules/h5-wrapper.cpp
   modules/io_utils.cpp
-  modules/OperatorsForMesons.cpp
+  modules/OperatorFactory.cpp
   modules/Perambulator.cpp
   modules/QuarkLineBlock2.cpp
   modules/RandomVector.cpp
