--- a/tests/integration-L4/test_all.ini
+++ b/tests/integration-L4/test_all.ini
@@ -45,13 +45,18 @@ correlator_list = C1:Op9:Q0:P0
 
 # charged pion
 correlator_list = C2c:Op9:Q0:Op9:Q0:P0,1,2,3,4
+correlator_list = C2c:Op0:Q0:Op4:Q0:P0,1,2,3,4
 
 # charged kaoc
 correlator_list = C2c:Op9:Q0:Op9:Q1:P0,1,2,3,4
+correlator_list = C2c:Op0:Q0:Op4:Q1:P0,1,2,3,4
 
 # neutral pion
 correlator_list = C20:Q0:Op11:Q0:Op11:P0,1,2,3,4
 correlator_list = C20V:Q0:Op11:Q0:Op11:P0,1,2,3,4
+
+correlator_list = C20:Q0:Op0:Q0:Op4:P0,1,2,3,4
+correlator_list = C20V:Q0:Op0:Q0:Op4:P0,1,2,3,4
 
 # rho 2pt functions
 correlator_list = C20:Op0:Q0:Op0:Q0:P0,1,2,3,4
@@ -64,14 +69,21 @@ correlator_list = C20:Op2:Q0:Op0:Q0:P0,1,2,3,4
 correlator_list = C20:Op2:Q0:Op1:Q0:P0,1,2,3,4
 correlator_list = C20:Op2:Q0:Op2:Q0:P0,1,2,3,4
 
+correlator_list = C20:Op0:Q0:Op4:Q0:P0,1,2,3,4
+
 # charged 3pt diagrams
 correlator_list = C3c:Op9:Q0:Op0:Q0:Op9:Q0:P0,1,2,3,4
 correlator_list = C3c:Op9:Q0:Op1:Q0:Op9:Q0:P0,1,2,3,4
 correlator_list = C3c:Op9:Q0:Op2:Q0:Op9:Q0:P0,1,2,3,4
 
+correlator_list = C3c:Op0:Q0:Op4:Q0:Op7:Q0:P0,1,2,3,4
+
 # neutral 3pt diagrams
 correlator_list = C30:Op9:Q0:Op9:Q0:Op9:Q0:P0,1,2,3,4
 correlator_list = C30V:Op9:Q0:Op9:Q0:Op9:Q0:P0,1,2,3,4
+
+correlator_list = C30:Op0:Q0:Op4:Q0:Op7:Q0:P0,1,2,3,4
+correlator_list = C30V:Op0:Q0:Op4:Q0:Op7:Q0:P0,1,2,3,4
 
 # charged 4pt diagrams
 correlator_list = C4cD:Op9:Q0:Op9:Q0:Op9:Q0:Op9:Q0:P0,1,2,3,4
@@ -79,11 +91,21 @@ correlator_list = C4cV:Op9:Q0:Op9:Q0:Op9:Q0:Op9:Q0:P0,1,2,3,4
 correlator_list = C4cB:Op9:Q0:Op9:Q0:Op9:Q0:Op9:Q0:P0,1,2,3,4
 correlator_list = C4cC:Op9:Q0:Op9:Q0:Op9:Q0:Op9:Q0:P0,1,2,3,4
 
+correlator_list = C4cD:Op0:Q0:Op4:Q0:Op7:Q0:Op9:Q0:P0,1,2,3,4
+correlator_list = C4cV:Op0:Q0:Op4:Q0:Op7:Q0:Op9:Q0:P0,1,2,3,4
+correlator_list = C4cB:Op0:Q0:Op4:Q0:Op7:Q0:Op9:Q0:P0,1,2,3,4
+correlator_list = C4cC:Op0:Q0:Op4:Q0:Op7:Q0:Op9:Q0:P0,1,2,3,4
+
 # neutral 4pt diagrams
 correlator_list = C40D:Op9:Q0:Op9:Q0:Op9:Q0:Op9:Q0:P0,1,2,3,4
 correlator_list = C40V:Op9:Q0:Op9:Q0:Op9:Q0:Op9:Q0:P0,1,2,3,4
 correlator_list = C40B:Op9:Q0:Op9:Q0:Op9:Q0:Op9:Q0:P0,1,2,3,4
 correlator_list = C40C:Op9:Q0:Op9:Q0:Op9:Q0:Op9:Q0:P0,1,2,3,4
+
+correlator_list = C40D:Op0:Q0:Op4:Q0:Op7:Q0:Op9:Q0:P0,1,2,3,4
+correlator_list = C40V:Op0:Q0:Op4:Q0:Op7:Q0:Op9:Q0:P0,1,2,3,4
+correlator_list = C40B:Op0:Q0:Op4:Q0:Op7:Q0:Op9:Q0:P0,1,2,3,4
+correlator_list = C40C:Op0:Q0:Op4:Q0:Op7:Q0:Op9:Q0:P0,1,2,3,4
 
 #correlator_list = C2c:Q0:Op10:Q0:Op10 #unitary pion
 #correlator_list = C2c:Q0:Op10:Q1:Op10 #OS kaon
