--- a/tests/integration-L4/test_all.ini
+++ b/tests/integration-L4/test_all.ini
@@ -37,7 +37,7 @@ operator_list = g13.d0.p0,1
 operator_list = g5.d0.p0,1
 operator_list = g5.d0.p0
 operator_list = g4.d0.p0,1
-operator_list = g5.d>x|>y,<x|<y.p0
+#operator_list = g5.d>x|>y,<x|<y.p0
 
 [correlator_lists]
 # Vacuum bubble
