--- a/tests/integration-L4/test_all.ini
+++ b/tests/integration-L4/test_all.ini
@@ -52,11 +52,11 @@ correlator_list = C2c:Op9:Q0:Op9:Q1:P0,1,2,3,4
 correlator_list = C2c:Op0:Q0:Op4:Q1:P0,1,2,3,4
 
 # neutral pion
-correlator_list = C20:Q0:Op11:Q0:Op11:P0,1,2,3,4
-correlator_list = C20V:Q0:Op11:Q0:Op11:P0,1,2,3,4
+correlator_list = C20:Op11:Q0:Op11:Q0:P0,1,2,3,4
+correlator_list = C20V:Op11:Q0:Op11:Q0:P0,1,2,3,4
 
-correlator_list = C20:Q0:Op0:Q0:Op4:P0,1,2,3,4
-correlator_list = C20V:Q0:Op0:Q0:Op4:P0,1,2,3,4
+correlator_list = C20:Op0:Q0:Op4:Q0:P0,1,2,3,4
+correlator_list = C20V:Op0:Q0:Op4:Q0:P0,1,2,3,4
 
 # rho 2pt functions
 correlator_list = C20:Op0:Q0:Op0:Q0:P0,1,2,3,4
@@ -68,7 +68,6 @@ correlator_list = C20:Op1:Q0:Op2:Q0:P0,1,2,3,4
 correlator_list = C20:Op2:Q0:Op0:Q0:P0,1,2,3,4
 correlator_list = C20:Op2:Q0:Op1:Q0:P0,1,2,3,4
 correlator_list = C20:Op2:Q0:Op2:Q0:P0,1,2,3,4
-
 correlator_list = C20:Op0:Q0:Op4:Q0:P0,1,2,3,4
 
 # charged 3pt diagrams
