--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -196,7 +196,7 @@ add_test(NAME "integration_L4_all_diagrams"
   WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/tests/integration-L4")
 
 add_test(NAME "integration_L4_charged_diagrams"
-  COMMAND "${CMAKE_CURRENT_BINARY_DIR}/contract" -i test_charged.ini --start_config 1000 --end_config 1000
+  COMMAND "${CMAKE_CURRENT_BINARY_DIR}/contract" -i test_conjugated.ini --start_config 1000 --end_config 1000
   WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/tests/integration-L4")
 
 add_test(NAME "integration_L4_neutral_diagrams"
