--- a/tests/integration-L4/test_conjugated.ini
+++ b/tests/integration-L4/test_conjugated.ini
@@ -64,5 +64,5 @@ correlator_list = C4cB:Op0:Q0:Op4:Q0:Op7:Q0:Op9:Q0:P0,1,2,3,4
 correlator_list = C4cC:Op0:Q0:Op4:Q0:Op7:Q0:Op9:Q0:P0,1,2,3,4
 
 correlator_list = C6cC:Op10:Q0:Op10:Q0:Op10:Q0:Op10:Q0:Op10:Q0:Op10:Q1:P0
-#correlator_list = C6cD:Op10:Q0:Op10:Q0:Op10:Q0:Op10:Q0:Op10:Q0:Op10:Q1:P0
+correlator_list = C6cD:Op10:Q0:Op10:Q0:Op10:Q0:Op10:Q0:Op10:Q0:Op10:Q1:P0
 correlator_list = C6cCD:Op10:Q0:Op10:Q0:Op10:Q0:Op10:Q0:Op10:Q0:Op10:Q1:P0
