Add a Kahan accumulator with test

--- a/tests/gtest/CMakeLists.txt
+++ b/tests/gtest/CMakeLists.txt
@@ -11,6 +11,7 @@ if(${GTEST_FOUND})
     main.cpp
     gamma.cpp
     create_momenta.cpp
+    KahanAccumulatorTest.cpp
     )
 
   target_link_libraries(main-gtest GTest::GTest lcontract)
