--- a/tests/integration-L4/test_all.ini
+++ b/tests/integration-L4/test_all.ini
@@ -104,9 +104,6 @@ correlator_list = C40V:Op0:Q0:Op4:Q0:Op7:Q0:Op9:Q0:P0,1,2,3,4
 correlator_list = C40B:Op0:Q0:Op4:Q0:Op7:Q0:Op9:Q0:P0,1,2,3,4
 correlator_list = C40C:Op0:Q0:Op4:Q0:Op7:Q0:Op9:Q0:P0,1,2,3,4
 
-#correlator_list = C2c:Q0:Op10:Q0:Op10 #unitary pion
-#correlator_list = C2c:Q0:Op10:Q1:Op10 #OS kaon
-##correlator_list = C2c:Q0:Op10:Q0:Op10 #usualpion with gamma10
-##correlator_list = C2c:Q0:Op4:Q0:Op4 #OS pion with \bar{u}^+u^-
-#correlator_list = C4cD:Q0:Op10:Q1:Op10:Q0:Op10:Q0:Op10 # direct K^+pi^+
-#correlator_list = C4cC:Q0:Op10:Q1:Op10:Q0:Op10:Q0:Op10 # cross diagram K^+pi^+
+correlator_list = C6cC:Op10:Q0:Op10:Q0:Op10:Q0:Op10:Q0:Op10:Q0:Op10:Q1:P0
+correlator_list = C6cD:Op10:Q0:Op10:Q0:Op10:Q0:Op10:Q0:Op10:Q0:Op10:Q1:P0
+correlator_list = C6cCD:Op10:Q0:Op10:Q0:Op10:Q0:Op10:Q0:Op10:Q0:Op10:Q1:P0
