Add accumulator benchmark

--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -3,6 +3,10 @@ find_package(benchmark)
 if(${benchmark_FOUND})
   add_executable(bench-main
     main.cpp
+
+    accumulation.cpp
+    create_momenta.cpp
+
     )
 
   target_link_libraries(bench-main benchmark::benchmark lcontract)
